# XSDGuru

./: CMakeLists.txt  README.md  attribute_types.hpp  declaration_factory.cpp  declaration_factory.hpp  indicator_matcher.cpp  indicator_matcher.hpp  regex_guru.cpp  regex_guru.hpp  type_enums.hpp  types.hpp  xsd_guru.cpp  xsd_guru.hpp
model/: attribute_declaration.hpp  base_declaration.hpp  bool_declaration.hpp  complex_content_declaration.cpp  complex_content_declaration.hpp  complex_element_declaration.cpp  complex_element_declaration.hpp  double_declaration.cpp  double_declaration.hpp  element_declaration.hpp  group_declaration.cpp  group_declaration.hpp  int_declaration.cpp  int_declaration.hpp  node_declaration.hpp  none_type_declaration.hpp  numeric_declaration.hpp  simple_content_declaration.cpp  simple_content_declaration.hpp  string_declaration.cpp  string_declaration.hpp  type_declaration.hpp
test/: CMakeLists.txt
test/test1/: CMakeLists.txt  main.cpp  test1_AnonymousTypeTest.xml  test1_ComplexContentTest.xml  test1_DoubleRootTest.xml  test1_ElementSequenceTest.xml  test1_ElementTypeTest.xml  test1_FullXSD.xml  test1_FullXSD.xsd  test1_FullXSD.xss  test1_SequenceInsertTest.xml  test1_SequenceRemoveTest.xml  test1_SequenceRemoveTest2.xml  test1_SimpleContentTest.xml  test1_TestXML.xml  test_validation_xml_invalid_tag.xml  test_validation_xml_parse_failure.xml
test/test2/: CMakeLists.txt  main.cpp  test2_SimpleTypeTest.xml
test/test3/: toInclude1.ssl
test/test3/main/: includetest.ssl  supersimple.ssl
